# demo-recorder

./: .gitignore  CLAUDE.md  README.md  VIDEO_PLAN.md  generate_narrations.py  pyproject.toml  record_demo.py  stitch_config.json  telegram_auth.json
docs/plans/: 2026-02-05-ramayana-engine-design.md
sample_scripts/: agent_dashboard_pov.json  ai_platform_demo.json  async_billing_chain_full_demo.json  billing_dispute_30_demo.json  cases_rules_demo.json  chunk_0_crm_baseline.json  chunk_0_empty_crm.json  chunk_1_path1_selfservice.json  chunk_1_telegram.json  chunk_2_path2_autoclose.json  chunk_2_platform.json  chunk_3_crm.json  chunk_3_path2_crm.json  chunk_4_path3_escalation.json  chunk_5_path3_agent.json  chunk_6_crm_final.json  ivr_workflow_demo.json  minimal_demo.json  path1_bill_inquiry.json  path2_network_outage.json  path3_billing_escalation.json  platform_orchestration_pov.json  telegram_billing_async_chain.json  telegram_billing_customer.json  telegram_crm_workflow_demo.json  telegram_customer_pov.json  visual_demo.json  workflow_shared.json
src/demo_recorder/: __init__.py  assembler.py  browser.py  cli.py  gif_generator.py  models.py  narration.py  preflight.py  recorder.py  script_loader.py  stitch.py  utils.py
